--- a/pom.xml
+++ b/pom.xml
@@ -32,9 +32,19 @@
         </dependency>
         <!-- https://mvnrepository.com/artifact/log4j/log4j -->
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.13.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.13.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.lmax</groupId>
+            <artifactId>disruptor</artifactId>
+            <version>3.3.11</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
         <dependency>
@@ -135,7 +145,7 @@
                 <directory>src/test/resources</directory>
                 <targetPath>${project.build.directory}/classes</targetPath>
                 <includes>
-                    <include>log4j.properties</include>
+                    <include>log4j2.xml</include>
                 </includes>
             </resource>
         </resources>
